# Diploma

./: CMakeLists.txt  main.cpp  main.h
DiplomaExperiments/: DiplomaExperiments.sln
DiplomaExperiments/DiplomaExperiments/: DiplomaExperiments.csproj  Program.cs  Structures.cs
DiplomaExperiments/DiplomaExperiments/Properties/: AssemblyInfo.cs
NETFractals/: NETFractals.sln
NETFractals/NETFractals/: FractalCompresor.cs  NETFractals.csproj  Program.cs
NETFractals/NETFractals/Properties/: AssemblyInfo.cs
